--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,18 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "flynsarmy/csv-seeder": "1.*",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "octavianparalescu/judete-orase-comune-sectoare-laravel-seeder": "*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -33,7 +35,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "OctavianParalescu\\": "src/OctavianParalescu"
         },
         "classmap": [
             "database/seeds",
