--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,20 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^6.2"
+        "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.2",
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
-        "octavianparalescu/judete-orase-comune-sectoare-laravel-seeder": "*"
+        "octavianparalescu/judete-orase-comune-sectoare-laravel-seeder": "*",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
