--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "laradock"]
-	path = laradock
-	url = https://github.com/laradock/laradock.git
+[submodule "debateapi-laradock"]
+	path = debateapi-laradock
+	url = https://github.com/octavianparalescu/debateapi-laradock
