--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "octavianparalescu/laravel-api-controller-methods": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
@@ -22,7 +23,6 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "octavianparalescu/judete-orase-comune-sectoare-laravel-seeder": "*",
-        "octavianparalescu/laravel-api-controller-methods": "*",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
