--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "cross-env": "^5.1",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "laravel-mix": "^5.0.7",
+        "lodash": "^4.17.20",
+        "minimist": ">=1.2.2",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "minimist": ">=1.2.2"
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.0"
     }
 }
