--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,20 @@
         "php": "^7.2",
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "^6.2",
-        "laravel/framework": "^6.2",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^v8.0.0",
+        "laravel/horizon": "^5.2",
         "laravel/tinker": "^2.0",
         "octavianparalescu/laravel-api-controller-methods": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.3.8",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "nunomaduro/collision": "^v4.2.0",
         "octavianparalescu/judete-orase-comune-sectoare-laravel-seeder": "*",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^9.4.1"
     },
     "config": {
         "optimize-autoloader": true,
