--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^v8.0.0",
         "laravel/horizon": "^5.2",
         "laravel/tinker": "^2.0",
-        "octavianparalescu/laravel-api-controller-methods": "*"
+        "octavianparalescu/laravel-api-controller-methods": "*",
+        "symfony/css-selector": "^5.1",
+        "symfony/dom-crawler": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
@@ -38,8 +40,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "OctavianParalescu\\": "src/OctavianParalescu"
+            "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
