--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.0",
         "octavianparalescu/laravel-api-controller-methods": "*",
         "symfony/css-selector": "^5.1",
-        "symfony/dom-crawler": "^5.1"
+        "symfony/dom-crawler": "^5.1",
+        "ext-dom": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
