--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "ext-dom": "*",
         "ext-json": "*",
+        "enrise/urihelper": "^1.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^v8.0.0",
@@ -17,8 +19,7 @@
         "laravel/tinker": "^2.0",
         "octavianparalescu/laravel-api-controller-methods": "*",
         "symfony/css-selector": "^5.1",
-        "symfony/dom-crawler": "^5.1",
-        "ext-dom": "*"
+        "symfony/dom-crawler": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
